tests/NormalTests/paczka1/small_fuzzy/38203869.err
Error in line 1: uF7qbn6P A174 82,2
Error in line 3: qLTT7 A682 417,1
Error in line 5: qLTT7 A414 35,5
